<resources>
    <string name="app_name">Expense Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_balance">YOUR BALANCE</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="_0_0">0.0</string>
    <string name="income">INCOME</string>
    <string name="expense">EXPENSE</string>
    <string name="history">History</string>
    <string name="add_new_transaction">Add new transaction</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="add_transaction">Add transaction</string>
    <string name="tracker">Tracker</string>
    <string name="clear">Clear</string>
    <string name="add_income">Add Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="update_income">Update Income</string>
    <string name="see_more"><![CDATA[See more >]]></string>
    <string name="sign_up">Sign Up</string>
    <string name="if_you_have_an_account_sign_in">If you have an account sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="if_you_don_t_have_an_account">If you don\'t have an account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="profile">Profile</string>
    <string name="button">Button</string>
    <string name="log_out">Log Out</string>
</resources>